--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js"></script>
     <title>Tic Tac Toe</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Tic Tac Toe</h1>
+        <div class="board"></div>
+        <h2 class="turn"></h2>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
