--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Schoolbell&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,6 +15,15 @@
         <div class="board"></div>
         <h2 class="turn"></h2>
     </div>
+    <dialog id="beginGame">
+        <form action="/" method="post">
+            <label for="playerOneName">Player One's Name</label>
+            <input type="text" id="playerOneName">
+            <label for="playerTwoName">Player Two's Name</label>
+            <input type="text" id="playerTwoName">
+            <button id="startGame">Start Game</button>
+        </form>
+    </dialog>
     <script src="script.js"></script>
 </body>
 </html>
