--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
     </div>
     <dialog id="beginGame">
         <form action="/" method="post">
-            <label for="playerOneName">Player One's Name</label>
-            <input type="text" id="playerOneName">
-            <label for="playerTwoName">Player Two's Name</label>
-            <input type="text" id="playerTwoName">
+            <div>
+                <label for="playerOneName">Player One's Name</label>
+                <input type="text" id="playerOneName">
+            </div>
+            <div>
+                <label for="playerTwoName">Player Two's Name</label>
+                <input type="text" id="playerTwoName">
+            </div>
             <button id="startGame">Start Game</button>
         </form>
     </dialog>
