add modal functionality

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h2 class="turn"></h2>
     </div>
     <dialog id="beginGame">
-        <form action="/" method="post">
+        <form>
             <div>
                 <label for="playerOneName">Player One's Name</label>
                 <input type="text" id="playerOneName">
