add cats game state and show reset button

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h1>Tic Tac Toe</h1>
         <div class="board"></div>
         <h2 class="turn"></h2>
+        <div class="restart"></div>
     </div>
     <dialog id="beginGame">
         <form>
@@ -25,7 +26,7 @@
                 <label for="playerTwoName">Player Two's Name</label>
                 <input type="text" id="playerTwoName">
             </div>
-            <button id="startGame">Start Game</button>
+            <button id="startGame" class="realButton">Start Game</button>
         </form>
     </dialog>
     <script src="script.js"></script>
